Manu functionalities in JS

--- a/jquery-example/index.html
+++ b/jquery-example/index.html
@@ -16,8 +16,13 @@
                 <input id="new_menu_item_close_button" type="button" value="Close"></button>
             </form>
 
+            <label>Search:</label><input id="search_box" type="text" /><br>
             <table id="menu_items_table" border="1">
                 
+            </table>
+            <hr>
+            <table id="deleted_menu_items_table" border="1">
+            
             </table>
         </center>
     </body>
