jquery select example

--- a/jquery-example/index.html
+++ b/jquery-example/index.html
@@ -5,6 +5,9 @@
     </head>
     <body>
         <center>
+            <div id="example_select">
+
+            </div>
             <button id="add_new_button">Add New</button>
             <br><br>
             <form id="new_menu_item_form" style="display: none;">
@@ -27,4 +30,43 @@
         </center>
     </body>
     <script src="index.js"></script>
+
+    <script>
+        const response = [
+            {
+                id: 1,
+                title: "Create Project",
+                status: 'done',
+                description: 'Create new PHP Project!'
+            },
+             {
+                id: 2,
+                title: "Create Project",
+                status: 'done',
+                description: 'Create new PHP Project!'
+            },
+             {
+                id: 3,
+                title: "Create Project",
+                status: 'in_progress',
+                description: 'Create new PHP Project!'
+            },
+        ]; 
+
+        for(let item of response){
+            let template = '<select>'+
+                    '<option value ="to_do" {{to_do_selected}}> To Do</option>'+
+                    '<option value="in_progress" {{in_progress_selected}}>In Progress</option> '+
+                '<option value="done" {{done_selected}}>Done</option> '+
+                '</select >';
+
+            template = template.replace("{{"+ item.status+"_selected}}", "selected");
+            
+            template = template.replace("{{in_progress_selected}}", "");
+            template = template.replace("{{to_do_selected}}", "");
+            template = template.replace("{{done_selected}}", "");
+
+            $("#example_select").append(template);
+        }
+    </script>
 </html>
